--- a/packages/web/src/app/[lang]/styles.css
+++ b/packages/web/src/app/[lang]/styles.css
@@ -6,45 +6,16 @@ body,
 #__next,
 .root {
   min-height: calc(var(--vh, 1vh) * 100);
+  margin: 0;
+  padding: 0;
 }
 body {
-  color: #45444c;
-  font-family: 'Plus Jakarta Sans, sans-serif';
+  color: #0E1216;
 }
-
 .root {
   display: flex;
   flex-direction: column;
 }
-
-.mainNav {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  background-color: #fff;
-  z-index: 1;
-  width: 100vw;
-}
-.mainNav::before {
-  content: '';
-  position: absolute;
-
-  background-color: transparent;
-  top: -32vw;
-  height: 32vw;
-  width: 16vw;
-  border-bottom-left-radius: 16vw;
-  box-shadow: 0 16vw 0 0 #fff;
-}
-.mainNav::after {
-  content: '';
-  position: absolute;
-
-  background-color: transparent;
-  top: -32vw;
-  right: 0;
-  height: 32vw;
-  width: 16vw;
-  border-bottom-right-radius: 16vw;
-  box-shadow: 0 16vw 0 0 #fff;
+*, *:before, *:after {
+  box-sizing: border-box;
 }
