--- a/packages/web/src/components/CardModuleBackground/CardModuleBackground.module.css
+++ b/packages/web/src/components/CardModuleBackground/CardModuleBackground.module.css
@@ -4,6 +4,10 @@
   left: 0;
   width: 100%;
   height: 100%;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
+  mask-size: cover;
+  -webkit-mask-size: cover;
 }
 
 .content {
