feat(#617): add post webcard (#651)
* feat: 🎸 add partial posts on web card

✅ Closes: #617

* style: 💄 remove useless comments

* refactor: 💡 improve scroll setup

* style: 💄 fix wrong formating

* refactor: 💡 improve modals

* feat: 🎸 complete webcard with posts

* fix: 🐛 add minor UI improvements

* fix: 🐛 apply fix for backface visibility on chrome & edge

* fix: 🐛 improve generated markup

--- a/packages/web/src/app/[lang]/styles.css
+++ b/packages/web/src/app/[lang]/styles.css
@@ -10,12 +10,14 @@ body,
   padding: 0;
 }
 body {
-  color: #0E1216;
+  color: var(--colorsblack);
 }
 .root {
   display: flex;
   flex-direction: column;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
