fix(android): #2739 configure deep links (#2814)

--- a/packages/app/android/app/src/staging/res/values/string.xml
+++ b/packages/app/android/app/src/staging/res/values/string.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Azzapp - Staging</string>
+    <string name="azzapp_domain">azzapp-staging.vercel.app</string>
 </resources>
