--- a/packages/app/android/app/src/development/res/values/string.xml
+++ b/packages/app/android/app/src/development/res/values/string.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Azzapp - Dev</string>
+    <string name="azzapp_domain">azzapp-dev.vercel.app</string>
 </resources>
