3872 bug 20240624 2 in cover editiontemplates the template tab does not scroll down correctly (#3911)

--- a/packages/app/android/app/src/development/res/values/string.xml
+++ b/packages/app/android/app/src/development/res/values/string.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Azzapp - Dev</string>
-    <string name="azzapp_domain">azzapp-dev.vercel.app</string>
+    <string name="azzapp_domain">dev.azzapp.com</string>
 </resources>
