--- a/packages/app/android/app/src/production/res/values/string.xml
+++ b/packages/app/android/app/src/production/res/values/string.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Azzapp</string>
-    <string name="azzapp_domain">azzapp.vercel.app</string>
+    <string name="azzapp_domain">azzapp.com</string>
 </resources>
