--- a/packages/app/android/app/src/staging/res/values/string.xml
+++ b/packages/app/android/app/src/staging/res/values/string.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Azzapp - Staging</string>
-    <string name="azzapp_domain">azzapp-staging.vercel.app</string>
+    <string name="azzapp_domain">staging.azzapp.com</string>
 </resources>
